--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en' ng-app="toDoApp">
+<html lang='en' ng-app="myApp">
 
   <head>
     <meta charset='utf-8'>
@@ -9,11 +9,19 @@
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="controllers.js"></script>
   </head>
-
   <body>
     <div ng-controller="ToDoController as controller">
-      {{ controller.todo }}
+
+      <p ng-repeat="todo in controller.todos">
+        {{ todo.task }}: {{ todo.completed ? "completed" : "not completed" }}
+      </p>
+      <p>
+        <input type="text" ng-model="text">
+        <button ng-click="controller.addToDo(text)">Add a ToDo</button>
+        <button ng-click="controller.removeToDo()">Remove last ToDo</button>
+      </p>
+
     </div>
   </body>
-
 </html>
+
