--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang='en' ng-app="myApp">
+<html lang='en' ng-app="toDoApp">
 
   <head>
     <meta charset='utf-8'>
@@ -8,7 +8,8 @@
     <script src="angular.min.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <script type="text/javascript" src="controllers.js"></script>
-    <script type="text/javascript" src="toDoFactory.js"></script>
+    <script type="text/javascript" src="ToDoFactory.js"></script>
+    <script type="text/javascript" src="ToDoService.js"></script>
   </head>
 
   <body>
